# Ghost_factory

./: .cursorrules  .env.example  .gitignore  README.md  TESTING_REPORT.md  TESTS_COMPLETE.md  TEST_SUMMARY.md  check_emoji_width.py  factory.py  fix_blanks.py  fix_md047.ps1  fix_readme.py  next.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
automation/: __init__.py  balance_sheet.py  client_utils.py  cost_tracker.py  factory.py  file_utils.py  generate_report.py  intake_sanitizer.py  lock_utils.py  memory.py  project_tracker_autoupdate.py  project_tracker_check.py  revenue_tracker.py  schema_validator.py  time_tracker.py  tracker_config.json
clients/: .gitkeep
components/: BentoGrid.tsx  ComparisonTable.tsx  ContactForm.tsx  CtaBanner.tsx  FaqAccordion.tsx  FeatureGrid.tsx  FeatureSteps.tsx  FooterSimple.tsx  GuaranteeBlock.tsx  HeroSimple.tsx  HeroSplit.tsx  LogoCloud.tsx  MetricsProvider.tsx  NavSimple.tsx  NewsletterSignup.tsx  PricingSimple.tsx  PricingTiers.tsx  SectionWrapper.tsx  StatsHighlight.tsx  TeamGrid.tsx  TestimonialCards.tsx  TrustBadges.tsx  VideoEmbed.tsx  index.ts
design-system/: dynamic_rules.md  manifest.md
docs/: ALIGNMENT_AGENT_PROMPT.md  DECISIONS_INBOX.md  DECISIONS_LOG.md  current_live_offer.md  decisions-scribe-prompt.md  hosting_policy.md  project_tracker  project_tracker.md  qa_checklist.md  refactoring-prompts.md  revisions_and_refunds.md
lib/: auth-utils.ts  client-utils.ts  (+7 more)
(+94 files in other folders)
