[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-factory"
version = "0.1.0"
description = "Automated landing page factory tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.10.0",
    "anthropic>=0.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "playwright>=1.41.0",
    "watchdog>=4.0.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["automation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-p", "no:warnings",
]
markers = [
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

